Fixing search bar spacing

--- a/app/assets/stylesheets/style_guide.css.scss
+++ b/app/assets/stylesheets/style_guide.css.scss
@@ -202,7 +202,7 @@ h1 {
   font-size: 1em;
   font-family: $headline-font;
   width: 15em;
-  padding: .35em .4em .4em;
+  padding: .34em .4em .44em;
   border-top-left-radius: .25em;
   border-bottom-left-radius: .25em;
   border-inset: none;
@@ -265,7 +265,7 @@ HOMEPAGE LESSON PREVIEWS
 }
 
 .lesson-preview-container {
-  margin: 3em auto 3em;
+  margin: 6em auto 3em;
   width: 45%;
   border: 1px solid #ddd;
   background: #f7f7f7;
